Finalize study of Pravda table

--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
    table#o-rings > thead > tr > th:nth-child(6) { width: 8%; }
    table#o-rings > thead > tr > th:nth-child(7) { width: 57%; }
 
-   table#o-rings .danger { color: red; }
-
    /* Statistical graphic density */
-   table#pravda { width: 26em;
+   table#pravda { width: 25em;
                   margin: 0 auto;
-                  padding: 0 5em;
+                  padding: 0 4em;
                   font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
    table#pravda > caption { font-variant: small-caps; } /* need ET Book to supply real small caps! */
-
+   table#pravda > tbody > tr > td { vertical-align: bottom; }
+   
    
   </style>
 </head>
