Introduce ImageQuilt support

--- a/index.html
+++ b/index.html
@@ -964,6 +964,15 @@
     </section>
 
     <section>
+      <h2>ImageQuilts</h2>
+      <p>Tufte CSS provides support for Edward Tufte and Adam Schwartz’s <a href="http://imagequilts.com/">ImageQuilts</a>. Some have ragged edges, others straight. Include these images just as you would any other <span class="code">figure</span>.</p>
+      <p>This is an ImageQuilt surveying Chinese calligraphy, placed in a full-width figure to accomodate its girth:</p>
+      <figure class="fullwidth"><img src="img/imagequilt - 750-Chinese Calligraphy.png"/></figure>
+      <p>Here is an ImageQuilt of 47 animal sounds over and over, in a figure constrained to the main text region. This quilt has ragged edges, but the image itself is of course still rectangular.</p>
+      <figure><img src="img/imagequilt - 230-47 animal sounds over and over.png"/></figure>
+    </section>
+    
+    <section>
       <h2>Other Tools</h2>
       <p>Tufte CSS attempts only to cover some basic “Tuftean” ideas, providing one possible set of defaults, using cascading stylesheets. Therefore many of the more interesting techniques he points to are far outside the scope of this project. Graphing data, interactive data visualizations, and non-traditional text formats are fantastic tools that aren’t covered by Tufte CSS. Here is a short and incomplete overview of tools that can help accomplish a few Tufte-like techniques.</p>
       <p>Sparklines are awesome, and can be created in a variety of ways. People are making them with <a href="https://github.com/adactio/Canvas-Sparkline">plain javascript</a>, <a href="http://omnipotent.net/jquery.sparkline/#s-about">jQuery</a>, <a href="http://www.tnoda.com/blog/2013-12-19">d3.js</a>, and <a href="http://www.highcharts.com/demo/sparkline">HighCharts</a>. Evaluate those solutions to see which is most appropriate for your needs.</p>
