"Thanks" in Epilogue

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
         <p>Here is an ImageQuilt of 47 animal sounds over and over, in a figure constrained to the main text region. This quilt has ragged edges, but the image itself is of course still rectangular.</p>
         <figure><img src="img/imagequilt - 230-47 animal sounds over and over.png"/></figure>
     </section>
+
+    <section>
+      <h2>Epilogue</h2>
+      <p>Many thanks go to Edward Tufte for leading the way with his work, and for his kind and careful editing.</p>
+    </section>
+    
   </article>
 </body>
 </html>
