--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <section>
       <h2>Epilogue</h2>
-      <p>Many thanks go to Edward Tufte for leading the way with his work, and for his kind and careful editing.</p>
+      <p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
     </section>
     
   </article>
