Use image names without spaces
Surpresses the following error:
```
Bad value img/image with space in its URL.png for attribute src on element img:
Illegal character in path segment: not a URL code point.
```

--- a/index.html
+++ b/index.html
@@ -966,9 +966,9 @@
       <h2>ImageQuilts</h2>
       <p>Tufte CSS provides support for Edward Tufte and Adam Schwartz’s <a href="http://imagequilts.com/">ImageQuilts</a>. Some have ragged edges, others straight. Include these images just as you would any other <span class="code">figure</span>.</p>
       <p>This is an ImageQuilt surveying Chinese calligraphy, placed in a full-width figure to accomodate its girth:</p>
-      <figure class="fullwidth"><img src="img/imagequilt - 750-Chinese Calligraphy.png"/></figure>
+      <figure class="fullwidth"><img src="img/imagequilt-chinese-calligraphy.png" alt="Image of Chinese Calligraphy"/></figure>
       <p>Here is an ImageQuilt of 47 animal sounds over and over, in a figure constrained to the main text region. This quilt has ragged edges, but the image itself is of course still rectangular.</p>
-      <figure><img src="img/imagequilt - 230-47 animal sounds over and over.png"/></figure>
+      <figure><img src="img/imagequilt-animal-sounds.png" alt="Image of animal sounds"/></figure>
     </section>
     
     <section>
