Remove stray double quotes inside `td` tags

--- a/index.html
+++ b/index.html
@@ -878,8 +878,8 @@
             <tr><td class="number">1</td><td>04.12.81</td><td>66&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text">Coolest (66&deg;) launch without O-ring problems.</td></tr>
             
             <tr><td class="number">6</td><td>04.04.83</td><td>67&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td></td></tr>
-            <tr><td class="number">51-A</td><td ">11.08.84</td><td>67&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
-            <tr><td class="number">51-D</td><td ">04.12.85</td><td>67&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
+            <tr><td class="number">51-A</td><td>11.08.84</td><td>67&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
+            <tr><td class="number">51-D</td><td>04.12.85</td><td>67&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
             <tr><td class="number">5</td><td>11.11.82</td><td>68&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
             <tr><td class="number">3</td><td>03.22.82</td><td>69&deg;</td><td></td><td></td><td><div class="number number2">0</div></td><td class="text"></td></tr>
             <tr><td class="number">2</td><td>11.12.81</td><td>70&deg;</td><td class="danger">1</td><td></td><td><div class="number number2">4</div></td><td class="text">Extent of erosion not fully known.</td></tr>
