Remove stray `span` closing tag

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <section>
       <h2>Tables</h2>
-      <p>Tabular data are presented by default with right-aligned numbers, left-aligned text, and minimal grid lines. The default font is Trebuchet<label for="sn-trebuchet" class="margin-toggle sidenote-number"></label></span><input type="checkbox" id="sn-trebuchet" class="margin-toggle"/><span class="sidenote">Trebuchet has <a href="http://www.cssfontstack.com/Trebuchet-MS">~97% penetration</a>.</span>, though a given table might require a different choice. This turns out to be a major principle of tables in Tufte CSS: while there are some defaults, each table requires substantial individual care. Here, more than anywhere else in Tufte CSS, one must customize the styling in order to present one’s data optimally.</p>
+      <p>Tabular data are presented by default with right-aligned numbers, left-aligned text, and minimal grid lines. The default font is Trebuchet<label for="sn-trebuchet" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-trebuchet" class="margin-toggle"/><span class="sidenote">Trebuchet has <a href="http://www.cssfontstack.com/Trebuchet-MS">~97% penetration</a>.</span>, though a given table might require a different choice. This turns out to be a major principle of tables in Tufte CSS: while there are some defaults, each table requires substantial individual care. Here, more than anywhere else in Tufte CSS, one must customize the styling in order to present one’s data optimally.</p>
 
       <p>Let’s look at some examples. Here’s one, from page 121 of Tufte’s <em>Visual Display of Quantitative Information</em>:</p>
 
