Keep backwards compatability for code blocks.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <p>If you prefer to layout your code so that it wraps within the available space, wrap each line of your code in a <span class="code">&lt;line>&lt;/line></span> pair.  This markup will cause the wrapped lines to be double-indented below and prefixed with a <a href="http://htmlarrows.com/arrows/right-arrow-with-hook/">right arrow with hook symbol</a>.  If you narrow your browser window enough, you can see this effect on the code below.
 
-    <pre class="code">
+    <pre class="code wrapped">
 <line>/*</line>
 <line> * One file structure is allocated</line>
 <line> * for each open/creat/pipe call.</line>
@@ -152,7 +152,7 @@
     </pre>
 
     <p>Finally, like images, code blocks also support a fullwidth class; an example of this is shown below. 
-    <pre class="code fullwidth">
+    <pre class="code wrapped fullwidth">
 <line>/*</line>
 <line> * Definition of the unix super block.</line>
 <line> * The root super block is allocated and</line>
