--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 ;; http://howistart.org/posts/clojure/1
       </pre>
 
-    <p>If you prefer to layout your code so that it wraps within the available space, wrap each line of your code in a <span class="code">&lt;line>&lt;/line></span> pair.  This markup will cause the wrapped lines to be double-indented below and prefixed with a <a href="http://htmlarrows.com/arrows/right-arrow-with-hook/">right arrow with hook symbol</a>.  If you narrow your browser window enough, you can see this effect on the code below.
+    <p>If you prefer to wrap long lines, surround each line of code in a <span class="code">&lt;line>&lt;/line></span> pair.  If you narrow your browser window enough, you can see this effect on the code below.
 
     <pre class="code wrapped">
 <line>/*</line>
@@ -151,7 +151,7 @@
 <line></line>
     </pre>
 
-    <p>Finally, like images, code blocks also support a fullwidth class; an example of this is shown below. 
+    <p>Finally, like images, code blocks also support a fullwidth class; an example of fullwidth wrapped code is below.
     <pre class="code wrapped fullwidth">
 <line>/*</line>
 <line> * Definition of the unix super block.</line>
@@ -200,7 +200,7 @@
       <h2 id="epilogue">Epilogue</h2>
       <p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
     </section>
-    
+
   </article>
 </body>
 </html>
