--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
       <h2 id="code">Code</h2>
       <p>Technical jargon, programming language terms, and code samples are denoted with the <span class="code">code</span> class, as I’ve been using in this document to denote HTML. Code needs to be monospace for formatting purposes and to aid in code analysis, but it must maintain its readability. To those ends, Tufte CSS follows GitHub’s font selection, which shifts gracefully along the monospace spectrum from the elegant but rare Consolas all the way to good old reliable Courier.</p>
       <p>Extended code examples should use a <span class="code">pre</span> tag with class <span class="code">code</span>. This adds control over indentation and overflow as well:</p>
-      <pre class="code">
-;; Some code examples in Clojure. This is a comment.
+      <pre class="code">;; Some code examples in Clojure. This is a comment.
 
 ;; applying a function to every item in the collection
 (map tufte-css blog-posts)
@@ -127,8 +126,7 @@
   (prn (* b d)))
 
 ;; If this proselytizing has worked, check out:
-;; http://howistart.org/posts/clojure/1
-      </pre>
+;; http://howistart.org/posts/clojure/1</pre>
     </section>
 
     <section>
@@ -144,7 +142,6 @@
       <h2 id="epilogue">Epilogue</h2>
       <p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
     </section>
-    
   </article>
 </body>
 </html>
