Shrink font size in pre-formatted code blocks
Smaller font in code blocks decreases the incidence of horizontal text
overflow, helps differentiate code from body text, and does not seem to
harm readability.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <h2 id="getting-started">Getting Started</h2>
       <p>To use Tufte CSS, copy <span class="code">tufte.css</span> and the <span class="code">et-book</span> directory of font files to your project directory, then add the following to your HTML document’s <span class="code">head</span> block:</p>
 
-      <pre class="code">&lt;link rel="stylesheet"
-      href="tufte.css"/&gt;</pre>
+      <pre class="code">&lt;link rel="stylesheet" href="tufte.css"/&gt;</pre>
 
       <p>Now you just have to use the provided CSS rules, and the Tufte CSS conventions described in this document. For best results, View Source and Inspect Element frequently.</p>
     </section>
