Add class and example for responsive iframes

--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
       </section>
 
       <section>
+        <h2 id="embeds">Embeds</h2>
+        <p>
+          Responsive iframes are horrible. Use them boldly by placing them within the <code>iframe-wrapper</code> class. The most common use for this is probably youtube videos, e.g.
+        </p>
+        <pre class="code">
+&lt;div class="iframe-wrapper"&gt;
+  &lt;iframe width="560" height="315" src="https://www.youtube.com/embed/uBYPqb83C7k" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
+&lt;/div&gt;
+        </pre>
+        <figure>
+          <div class="iframe-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uBYPqb83C7k" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </figure>
+      </section>
+
+      <section>
         <h2 id="epilogue">Epilogue</h2>
         <p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
       </section>
